syntax = "proto3";

package typ_p;
option go_package = "gitlab.com/mippo.app/typ-p.git/go/pb/typ_p";

import "typ_p/date.proto";

message date_range {
  date date_from = 1;
  date date_to = 2;
}
